--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  "qdigidoc-0.4.0.tar.bz2": 81745b0f0788704c526dc9d79da18e8d4ef6d274
+  qdigidoc4-4.2.8.tar.gz: d142d37ee9c49e9e1010d68b55ed9b4f85ae221e
